# velcro

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  tvel.c
include/: velcro.h
src/: velcro.c
